--- a/css/style.css
+++ b/css/style.css
@@ -114,9 +114,15 @@ ul li div{
     
 }
 
+.list-playlist{
+
+    height: 100%;
+
+}
 
 
-.list-playlist ul li{
+
+.list-playlist li{
     padding-bottom: 1rem;
     font-size: 0.8rem;
     font-weight:700;
@@ -132,6 +138,7 @@ ul li div{
 ///////////COMAND-BAR////////////
 ********************************/
 .comand-bar{
+    max-width: 100%;
     justify-content: space-between;
     color: #ffff;
 }
@@ -151,24 +158,23 @@ ul li div{
 }
 
 .middle-cont{
-    width: 50%;
-    max-width: 500px;
+    width: 30%;
+    min-width: 250px;
 }
 
 .contain-button-comand-bar{
+    gap: calc(var(--gap)/2);
     overflow: hidden;
     justify-content: center;
 }
 
 .contain-button-comand-bar svg{
-    width: 2rem;
-    padding: calc(var(--space) / 2);
+    width: 1rem;
 }
 
 .contain-button-comand-bar>:nth-child(3){
-    padding: 0;
-    margin-left: 1rem;
-    margin-right: 1rem;
+    width: 2rem;
+    margin: calc(var(--space)/2);
 }
 
 .progress-bar-cont{
@@ -188,9 +194,12 @@ ul li div{
     border-radius: 20px;
 }
 
+.left-cont{
+    min-width: 100px
+}
+
 .right-cont{
-    width: 20%;
-    min-width: 200px;
+    min-width: 150px;
 }
 
 .container-vol-bar{
@@ -284,6 +293,11 @@ ul li div{
 
 .half-default-padding{
     padding: calc(var(--space) / 2 );
+}
+
+.half-default-padding-left-right{
+    padding-left: calc(var(--space)/2);
+    padding-right: calc(var(--space)/2)
 }
 
 
